[package]
name = "art-of-constellation"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
debug = true

[dependencies]
skylite-core = { path = "../skylite/crates/skylite-core" }
skylite-proc = { path = "../skylite/crates/skylite-proc" }
skylite-compress = { path = "../skylite/crates/skylite-compress" }
wasm4-target = { path = "../skylite/support/wasm4-target" }
